plugins {
    id 'java'
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    group = 'com.shop'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << '-parameters'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    ext {
        lombokVersion = '1.18.38'
    }

    dependencies {
        implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"

        testCompileOnly "org.projectlombok:lombok:$lombokVersion"
        testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
    }

    tasks.withType(Test).tap {
        configureEach {
            useJUnitPlatform()

            jvmArgs += ["-XX:+EnableDynamicAgentLoading"]

            testLogging {
                events("passed", "skipped", "failed")
                exceptionFormat = "full"

                lifecycle {
                    showStandardStreams = true
                }
            }

            afterSuite { desc, result ->
                if (!desc.parent) {
                    println "--------------------------------------------------"
                    println "Тестов всего: ${result.testCount}"
                    println "Успешно:      ${result.successfulTestCount}"
                    println "Провалено:    ${result.failedTestCount}"
                    println "Пропущено:    ${result.skippedTestCount}"
                    println "Результат:    ${result.resultType}"
                    println "--------------------------------------------------"
                }
            }
        }
    }
}
